<resources>
    <string name="app_name">My Syllabus</string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">close Navigation drawer</string>
    <string name="hint">Enter your name </string>
    <string name="text">Get Started</string>
    <string name="text2">Get All Your Syllabus on Our App!</string>
    <string name="title_activity_home">home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aeronautical">Aeronautical</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="Semester1ST">1ST Semester</string>
    <string name="Semester2ND">2ND Semester</string>
    <string name="Semester3RD">3RD Semester</string>
    <string name="Semester4TH">4TH Semester</string>
    <string name="Semester5th">5TH Semester</string>
    <string name="Semester6TH">6TH Semester</string>
    <string name="Semester7TH">7TH Semester</string>
    <string name="Semester8TH">8TH Semester</string>
    <string name="Aero">AERONAUTICAL</string>
    <string name="cse">CSE</string>
    <string name="ai">AI ML</string>
    <string name="eee">EEE</string>
    <string name="mechanical">MECHANICAL</string>
    <string name="mechanicalelective">MECHANICAL ELECTIVE</string>
    <string name="civil">CIVIL</string>
    <string name="sub1">Basic Electrical Engineering</string>
    <string name="bee"> \n\n\n<b> <font fgcolor='#F700FF'> MODULE 1: DC CIRCUITS (8 LECTURES)></font></b>\n \n\n

ELECTRICAL CIRCUIT ELEMENTS (R, L AND C), VOLTAGE AND CURRENT SOURCES, KIRCHHOFF CURRENT AND VOLTAGE LAWS, ANALYSIS OF SIMPLE CIRCUITS WITH DC EXCITATION. STAR-DELTA CONVERSION, NETWORK THEOREMS (SUPERPOSITION, THEVENIN, NORTON AND MAXIMUM POWER TRANSFER THEOREMS). TIME-DOMAIN ANALYSIS OF FIRST-ORDER RL AND RC CIRCUITS \n\n\n

<b><font fgcolor='#F700FF'>MODULE 2: AC CIRCUITS (8 LECTURES)</font></b> \n \n\n

REPRESENTATION OF SINUSOIDAL WAVEFORMS, PEAK, RMS AND AVERAGE VALUES (FORM FACTOR AND PEAK FACTOR), IMPEDANCE OF SERIES AND PARALLEL CIRCUIT, PHASOR REPRESENTATION, REAL POWER, REACTIVE POWER, APPARENT POWER, POWER FACTOR, POWER TRIANGLE. ANALYSIS OF SINGLE-PHASE AC CIRCUITS CONSISTING OF R, L, C, RL, RC, RLC COMBINATIONS (SERIES AND PARALLEL), RESONANCE. THREE-PHASE BALANCED CIRCUITS, VOLTAGE AND CURRENT RELATIONS IN STAR AND DELTA CONNECTIONS. \n\n\n

        <b><font fgcolor='#F700FF'>MODULE 3: MAGNETIC CIRCUITS: (4 LECTURES)</font></b>\n\n\n

INTRODUCTION, SERIES AND PARALLEL MAGNETIC CIRCUITS, ANALYSIS OF SERIES AND PARALLEL MAGNETIC CIRCUITS. \n\n\n

        <b><font fgcolor='#F700FF'>MODULE 4: TRANSFORMERS (6 LECTURES)</font></b> \n\n\n

MAGNETIC MATERIALS, BH CHARACTERISTICS, IDEAL AND PRACTICAL TRANSFORMER, EMF EQUATION, EQUIVALENT CIRCUIT, LOSSES IN TRANSFORMERS, REGULATION AND EFFICIENCY. AUTO-TRANSFORMER AND THREE-PHASE TRANSFORMER CONNECTIONS. \n\n\n

        <b><font fgcolor='#F700FF'>MODULE 5: ELECTRICAL MACHINES (10 LECTURES)</font></b> \n\n\n

CONSTRUCTION, WORKING, TORQUE-SPEED CHARACTERISTIC AND SPEED CONTROL OF SEPARATELY EXCITED DC MOTOR. GENERATION OF ROTATING MAGNETIC FIELDS, CONSTRUCTION AND WORKING OF A THREE-PHASE INDUCTION MOTOR, SIGNIFICANCE OF TORQUE-SLIP CHARACTERISTIC. LOSS COMPONENTS AND EFFICIENCY, STARTING AND SPEED CONTROL OF INDUCTION MOTOR. CONSTRUCTION AND WORKING OF SYNCHRONOUS GENERATORS. \n \n\n

        <b><font fgcolor='#F700FF'>MODULE 6: ELECTRICAL INSTALLATIONS (6 LECTURES)</font></b> \n\n\n

COMPONENTS OF LT SWITCHGEAR: SWITCH FUSE UNIT (SFU), MCB, ELCB, MCCB, TYPES OF WIRES AND CABLES, EARTHING. TYPES OF BATTERIES, IMPORTANT CHARACTERISTICS FOR BATTERIES. ELEMENTARY CALCULATIONS FOR ENERGY CONSUMPTION, POWER FACTOR IMPROVEMENT AND BATTERY BACKUP. \n\n\n

        <b><font fgcolor='#F700FF'>SUGGESTED TEXT / REFERENCE BOOKS</font></b> \n\n\n

~D. P. KOTHARI AND I. J. NAGRATH, "BASIC ELECTRICAL ENGINEERING", TATA MCGRAW HILL, 2010. \n\n\n

~D. C. KULSHRESHTHA, "BASIC ELECTRICAL ENGINEERING", MCGRAW HILL, 2009. \n\n\n

~L. S. BOBROW, "FUNDAMENTALS OF ELECTRICAL ENGINEERING", OXFORD UNIVERSITY PRESS, 2011. \n\n\n

~E. HUGHES, "ELECTRICAL AND ELECTRONICS TECHNOLOGY", PEARSON, 2010. \n\n\n

~V. D. TORO, "ELECTRICAL ENGINEERING FUNDAMENTALS", PRENTICE HALL INDIA, 1989. \n\n\n

~ BASIC ELECTRICAL ENGINEERING BY FITZERALD, ET AL, TATA MCGRAW HILL \n\n\n

~FUNDAMENTALS OF ELECTRICAL ENGG. BY R. PRASAD, PHI PUBLICATION \n\n\n

~BASIC ELECTRICAL ENGINEERING BY V.K. MEHTA AND ROHIT MEHTA, S.CHAND PUBLICATION</string>
    <string name="sub2">Engineering Graphics And Design</string>
    <string name="edg">\n\n\n

  <b><font fgcolor='#F700FF'>L:1 T:0 P:4 Credit:3</font></b> \n\n\n

          <b><font fgcolor='#F700FF'>TRADITIONAL ENGINEERING GRAPHICS:</font></b>\n\n\n

PRINCIPLES OF ENGINEERING GRAPHICS; ORTHOGRAPHIC PROJECTION; DESCRIPTIVE GEOMETRY; DRAWING PRINCIPLES; ISOMETRIC PROJECTION; SURFACE DEVELOPMENT; PERSPECTIVE; READING A DRAWING; SECTIONAL VIEWS; DIMENSIONING and TOLERANCES; TRUE LENGTH, ANGLE; INTERSECTION, SHORTEST DISTANCE.\n\n\n

          <b><font fgcolor='#F700FF'>COMPUTER GRAPHICS:</font></b>\n\n\n

ENGINEERING GRAPHICS SOFTWARE; -SPATIAL TRANSFORMATIONS; ORTHOGRAPHIC PROJECTIONS; MODEL VIEWING; CO-ORDINATE SYSTEMS; MULTI-VIEW PROJECTION; EXPLODED ASSEMBLY; MODEL VIEWING; ANIMATION; SPATIAL MANIPULATION; SURFACE MODELLING; SOLID MODELLING, INTRODUCTION TO BUILDING INFORMATION MODELLING (BIM).\n\n\n

         <b><font fgcolor='#F700FF'>(EXCEPT THE BASIC ESSENTIAL CONCEPTS, MOST OF THE TEACHING PART CAN HAPPEN CONCURRENTLY IN THE LABORATORY)</font></b>\n\n\n

          <b><font fgcolor='#F700FF'>MODULE 1: INTRODUCTION TO ENGINEERING DRAWING</font></b>\n\n\n

PRINCIPLES OF ENGINEERING GRAPHICS AND THEIR SIGNIFICANCE, USAGE OF DRAWING INSTRUMENTS, LETTERING, CONIC SECTIONS INCLUDING THE RECTANGULAR HYPERBOLA (GENERAL METHOD ONLY); CYCLOID, EPICYCLOID, HYPOCYCLOID AND INVOLUTE; SCALES - PLAIN, DIAGONAL AND VERNIER SCALES\n\n\n

          <b><font fgcolor='#F700FF'>MODULE 2: ORTHOGRAPHIC PROJECTIONS</font></b>\n\n\n

PRINCIPLES OF ORTHOGRAPHIC PROJECTIONS-CONVENTIONS -PROJECTIONS OF POINTS AND LINES INCLINED TO BOTH PLANES; PROJECTIONS OF PLANES INCLINED PLANES -AUXILIARY PLANES \n\n\n

          <b><font fgcolor='#F700FF'>MODULE 3: PROJECTIONS OF REGULAR SOLIDS </font></b>\n\n\n

THOSE INCLINED TO BOTH THE PLANES- AUXILIARY VIEWS; DRAW SIMPLE ANNOTATION, DIMENSIONING AND SCALE. FLOOR PLANS THAT INCLUDE: WINDOWS, DOORS, AND FIXTURES SUCH AS WC, BATH, SINK, SHOWER, ETC.\n\n\n


  <b><font fgcolor='#F700FF'>MODULE 4: SECTIONS AND SECTIONAL VIEWS OF RIGHT ANGULAR SOLIDS </font></b>\n\n\n

COVERING, PRISM, CYLINDER, PYRAMID, CONE - AUXILIARY VIEWS; DEVELOPMENT OF SURFACES OF RIGHT REGULAR SOLIDS-PRISM, PYRAMID, CYLINDER AND CONE; DRAW THE SECTIONAL ORTHOGRAPHIC VIEWS OF GEOMETRICAL SOLIDS, OBJECTS FROM INDUSTRY AND DWELLINGS (FOUNDATION TO SLAB ONLY)\n\n\n

          <b><font fgcolor='#F700FF'>MODULE 5: ISOMETRIC PROJECTIONS</font></b>\n\n\n

PRINCIPLES OF ISOMETRIC PROJECTION-ISOMETRIC SCALE, ISOMETRIC VIEWS, CONVENTIONS; ISOMETRIC VIEWS OF LINES, PLANES, SIMPLE AND COMPOUND SOLIDS; CONVERSION OF ISOMETRIC VIEWS TO ORTHOGRAPHIC VIEWS AND VICE-VERSA, CONVENTIONS \n\n\n

        <b><font fgcolor='#F700FF'>MODULE 6: OVERVIEW OF COMPUTER GRAPHICS</font></b> \n\n\n

LISTING THE COMPUTER TECHNOLOGIES THAT IMPACT ON GRAPHICAL COMMUNICATION, DEMONSTRATING KNOWLEDGE OF THE THEORY OF CAD SOFTWARE [SUCH AS: THE MENU SYSTEM, TOOLBARS (STANDARD, OBJECT PROPERTIES, DRAW, MODIFY AND DIMENSION), DRAWING AREA (BACKGROUND, CROSSHAIRS, COORDINATE SYSTEM), DIALOG BOXES AND WINDOWS, SHORTCUT MENUS (BUTTON BARS), THE COMMAND LINE (WHERE APPLICABLE), THE STATUS BAR, DIFFERENT METHODS OF ZOOM AS USED IN CAD, SELECT AND ERASE OBJECTS.; ISOMETRIC VIEWS OF LINES, PLANES, SIMPLE AND COMPOUND SOLIDS] \n\n\n

          <b><font fgcolor='#F700FF'>MODULE 7: CUSTOMISATION and CAD DRAWING</font></b>\n\n\n

CONSISTING OF SET UP OF THE DRAWING PAGE AND THE PRINTER, INCLUDING SCALE SETTINGS, SETTING UP OF UNITS AND DRAWING LIMITS; ISO AND ANSI STANDARDS FOR COORDINATE DIMENSIONING AND TOLERANCING; ORTHOGRAPHIC CONSTRAINTS, SNAP TO OBJECTS MANUALLY AND AUTOMATICALLY; PRODUCING DRAWINGS BY USING VARIOUS COORDINATE INPUT ENTRY METHODS TO DRAW STRAIGHT LINES, APPLYING VARIOUS WAYS OF DRAWING CIRCLES. \n\n\n

         <b><font fgcolor='#F700FF'>MODULE 8: ANNOTATIONS, LAYERING and OTHER FUNCTIONS</font></b>\n\n\n

COVERING APPLYING DIMENSIONS TO OBJECTS, APPLYING ANNOTATIONS TO DRAWINGS; SETTING UP AND USE OF LAYERS, LAYERS TO CREATE DRAWINGS, CREATE, EDIT AND USE CUSTOMIZED LAYERS; CHANGING LINE LENGTHS THROUGH MODIFYING EXISTING LINES (EXTEND/ LENGTHEN); PRINTING DOCUMENTS TO PAPER USING THE PRINT COMMAND; ORTHOGRAPHIC PROJECTION TECHNIQUES; DRAWING SECTIONAL VIEWS OF COMPOSITE RIGHT REGULAR GEOMETRIC SOLIDS AND PROJECT THE TRUE SHAPE OF THE SECTIONED SURFACE; DRAWING ANNOTATION, COMPUTER-AIDED DESIGN (CAD) SOFTWARE MODELING OF PARTS AND ASSEMBLIES. PARAMETRIC AND NON-PARAMETRIC SOLID, SURFACE, AND WIREFRAME MODELS. PART EDITING AND TWO-DIMENSIONAL DOCUMENTATION OF MODELS. PLANAR PROJECTION THEORY, INCLUDING SKETCHING OF PERSPECTIVE, ISOMETRIC, MULTIVIEW, AUXILIARY, AND SECTION VIEWS. SPATIAL VISUALIZATION EXERCISES. DIMENSIONING GUIDELINES, TOLERANCING TECHNIQUES; DIMENSIONING AND SCALE MULTI VIEWS OF DWELLING.\n\n\n

          <b><font fgcolor='#F700FF'>MODULE 9: DEMONSTRATION OF A SIMPLE TEAM DESIGN PROJECT THAT ILLUSTRATES</font></b>\n\n\n

GEOMETRY AND TOPOLOGY OF ENGINEERED COMPONENTS: CREATION OF ENGINEERING MODELS AND THEIR PRESENTATION IN STANDARD 2D BLUEPRINT FORM AND AS 3D WIRE-FRAME AND SHADED SOLIDS; MESHED TOPOLOGIES FOR ENGINEERING ANALYSIS AND TOOL-PATH GENERATION FOR COMPONENT MANUFACTURE; GEOMETRIC DIMENSIONING AND TOLERANCING; USE OF SOLID-MODELING SOFTWARE FOR CREATING ASSOCIATIVE MODELS AT THE COMPONENT AND ASSEMBLY LEVELS. FLOOR PLANS THAT INCLUDE: WINDOWS, DOORS, AND FIXTURES SUCH AS WC, BATH, SINK, SHOWER, ETC. APPLYING COLOUR CODING ACCORDING TO BUILDING DRAWING PRACTICE; DRAWING SECTIONAL ELEVATION SHOWING FOUNDATION TO CEILING; INTRODUCTION TO BUILDING INFORMATION MODELLING (BIM).\n\n\n

         <b><font fgcolor='#F700FF'>SUGGESTED TEXT/REFERENCE BOOKS:</font></b>\n\n\n

~ BHATT N.D., PANCHAL V.M. and INGLE P.R., (2014), ENGINEERING DRAWING, CHAROTAR PUBLISHING HOUSE\n\n\n

~SHAH, M.B. and RANA B.C. (2008), ENGINEERING DRAWING AND COMPUTER GRAPHICS, PEARSON EDUCATION\n\n\n

~ AGRAWAL B. and AGRAWAL C. M. (2012), ENGINEERING GRAPHICS, TMH PUBLICATION\n\n\n

~ NARAYANA, K.L. and P KANNAIAH (2008), TEXT BOOK ON ENGINEERING DRAWING, SCITECHPUBLISHERS\n\n\n

~(CORRESPONDING SET OF) CAD SOFTWARE THEORY AND USER MANUALS\n\n\n</string>
    <string name="sub3">Mathematics-I (Calculus And linear Algebra)</string>
</resources>