<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Aeronautical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_20sdp"
            android:text="@string/civil"
            android:textColor="#00CC7A"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <!--    0-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp"
            tools:ignore="DuplicateSpeakableTextCheck">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester1ST"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <!--            <TextView-->
                <!--                android:id="@+id/detail"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:text="@string/text2"-->
                <!--                android:textSize="@dimen/_18ssp"-->
                <!--                android:visibility="gone" />-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand1"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester2ND"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand2"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester3RD"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        3-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand3"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester4TH"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        4-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand4"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp"
            tools:ignore="TouchTargetSizeCheck">

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester5th"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        5-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand5"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester6TH"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        6-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand6"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester7TH"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--        7-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="expand7"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            app:contentPadding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/layout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Semester8TH"
                    android:textColor="#0097A7"
                    android:textSize="@dimen/_32ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="@dimen/_18ssp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
